# openstack-ansible-os_panko

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  setup.cfg  tox.ini
defaults/: main.yml
doc/source/: conf.py
examples/: playbook.yml
extras/: ansible-role-requirements.yml  haproxy_panko.yml  openstack_services.yml  os-panko-install.yml  user_secrets_panko.yml
extras/group_vars/all/: panko.yml
handlers/: main.yml
meta/: main.yml  openstack-ansible.yml
releasenotes/source/: conf.py  index.rst  queens.rst
tasks/: main.yml  panko_apache.yml  panko_db_setup.yml  panko_install.yml  panko_post_install.yml  panko_pre_install.yml  panko_service_setup.yml
templates/: panko-api-wsgi.py.j2  panko-httpd.conf.j2  panko-ports.conf.j2  panko-uwsgi.ini.j2  panko.conf.j2
tests/: ansible-role-requirements.yml  inventory  os_panko-overrides.yml  test-install-panko.yml  test.yml
tests/group_vars/: all_containers.yml
vars/: debian.yml  main.yml  redhat-7.yml  redhat.yml  suse-42.yml  suse.yml
zuul.d/: project.yaml
